<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/windowBackground"
        android:id="@+id/create_image"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/create_image">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="cse403.blast.CreateEventActivity"
        tools:showIn="@layout/activity_create_event"
        android:id="@+id/create_event_layout">

        <!-- Usual content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <Spinner
                android:id="@+id/create_category"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:backgroundTint="@color/colorPrimary"
                android:popupBackground="@color/colorPrimary"
                android:textColor="@color/lightText"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/create_title"
                android:textColor="@color/lightText"
                android:textColorHint="@color/lightText"
                android:hint="title"
                android:maxLength="75"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/create_description"
                android:textColor="@color/lightText"
                android:textColorHint="@color/lightText"
                android:hint="description"
                android:maxLength="200"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:id="@+id/create_date"
                    android:textColor="@color/lightText"
                    android:textColorHint="@color/lightText"
                    android:hint="date"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:id="@+id/create_time"
                    android:textColor="@color/lightText"
                    android:textColorHint="@color/lightText"
                    android:hint="time"
                    android:layout_toRightOf="@+id/create_date"/>
            </RelativeLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/create_location"
                android:textColor="@color/lightText"
                android:textColorHint="@color/lightText"
                android:hint="location"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location_list">
            </ListView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/create_limit"
                android:textColor="@color/lightText"
                android:textColorHint="@color/lightText"
                android:hint="people limit"
                android:maxLength="4"
                android:inputType="number"
                android:digits="1234567890"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="30sp"
                android:backgroundTint="@color/blastAccent"
                android:textColor="@color/lightText"
                android:fontFamily="sans-serif-light"
                android:textAllCaps="false"
                android:id="@+id/create_submit_button" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="30sp"
                android:backgroundTint="@color/blastAccent"
                android:textColor="@color/lightText"
                android:fontFamily="sans-serif-light"
                android:textAllCaps="false"
                android:id="@+id/create_cancel_button" />
        </LinearLayout>
    </RelativeLayout>

    </ScrollView>
    <!-- Tutorial -->
    <RelativeLayout
        android:id="@+id/tutorial_create"
        android:background="#c1000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/create_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>
</RelativeLayout>