<resources>
    <string name="app_name">Blast</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>
    <string name="action_sort">Sort Events</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to CreateEventActivity -->
    <string name="create_cancel_button">cancel blast</string>
    <string name="create_save_button">save blast</string>
    <string name="create_blast_button">blast it!</string>

    <!-- Strings related to DetailActivity -->
    <string name="detail_time">when:\u0020</string>
    <string name="detail_who">who:\u0020</string>
    <string name="detail_what">what:\u0020</string>
    <string name="detail_where">where:\u0020</string>
    <string name="detail_edit">edit blast</string>
    <string name="detail_leave">leave blast</string>
    <string name="detail_join">have a blast!</string>

    <!-- Strings related to login -->
    <string name="app_id">553561694808911</string>
</resources>
