<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse403.blast.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@color/windowBackground">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_blast_list_view"
        android:background="@color/windowBackground">
    </ListView>

    <!-- Tutorial -->

    <RelativeLayout
        android:id="@+id/tutorial_main"
        android:background="#c1000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/main_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>
</RelativeLayout>
